[gd_scene load_steps=9 format=3 uid="uid://wbswaxg8amh1"]

[ext_resource type="Script" path="res://scripts/menus_screens/level_menu.gd" id="1_nqtrb"]
[ext_resource type="Texture2D" uid="uid://c1apv0f2ojjg1" path="res://assets/assets_for_GameEng/bg_normal.png" id="2_2hdeb"]
[ext_resource type="Script" path="res://scripts/menus_screens/menu_item.gd" id="2_f0v4j"]
[ext_resource type="FontFile" uid="uid://djjo38unaf1h" path="res://assets/assets_for_GameEng/Futura Light.otf" id="3_j8bgr"]

[sub_resource type="LabelSettings" id="LabelSettings_ovxh0"]
font = ExtResource("3_j8bgr")
font_size = 90
outline_size = 11
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pfcbe"]
font = ExtResource("3_j8bgr")
font_size = 55
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qlhul"]
font = ExtResource("3_j8bgr")
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cg7ux"]
font = ExtResource("3_j8bgr")
font_size = 55
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 1)

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource("1_nqtrb")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2hdeb")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -454.0
offset_top = 191.0
offset_right = 435.0
offset_bottom = 334.0
grow_horizontal = 2
text = "How To Play"
label_settings = SubResource("LabelSettings_ovxh0")
horizontal_alignment = 1

[node name="backtomainmenu" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -165.0
offset_right = 152.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(150, 23)
mouse_filter = 0
text = "Back to Main Menu"
label_settings = SubResource("LabelSettings_pfcbe")
vertical_alignment = 1
script = ExtResource("2_f0v4j")

[node name="Instructions" type="Label" parent="."]
offset_left = 371.0
offset_top = 369.0
offset_right = 1523.0
offset_bottom = 730.0
text = "Oh no, the lights went out in Sarntal! 
Generate as much hydropower as possible by adding and removing terrain.
Be careful to protect the villages!

Generate: Mouse Left
Remove: Mouse Right

Press escape to pause the game."
label_settings = SubResource("LabelSettings_qlhul")
horizontal_alignment = 1

[node name="play" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -302.0
offset_right = 151.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(150, 23)
mouse_filter = 0
text = "I'm ready!"
label_settings = SubResource("LabelSettings_cg7ux")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_f0v4j")

[connection signal="gui_input" from="backtomainmenu" to="." method="_on_backtomainmenu_gui_input"]
[connection signal="mouse_entered" from="backtomainmenu" to="backtomainmenu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="backtomainmenu" to="backtomainmenu" method="_on_mouse_exited"]
[connection signal="gui_input" from="play" to="." method="_on_play_gui_input"]
[connection signal="mouse_entered" from="play" to="play" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="play" to="play" method="_on_mouse_exited"]
